<resources>
    <string name="app_name">Lupolupo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="new_releases">\t\t\tNew Releases</string>
    <string name="terms_of_use">Terms and Conditions</string>
    <string name="open_source_license">Open Source License</string>
    <string name="app_version">App Version</string>
    <string name="subscribe">+ Subscribe</string>
    <string name="episode_no">#%1$d</string>
    <string name="empty">Empty</string>
    <string name="cover_image">coverImage</string>
    <string name="like_button">Like Button</string>
    <string name="share">Share</string>
    <string name="contact_us_text">LupoLupo\nVenice Beach, California\n\nGeneral information and requests:	</string>
    <string name="contact_us_info_email">\t\tinfo@lupolupo.com</string>
    <string name="contact_us_feedback_text">\n\nAwards, Superlatives, etc</string>
    <string name="contact_us_feedback_email">\t\tfeedback@lupolupo.com</string>
    <string name="contact_us_text_complain_text">\n\nComplaints, Criticisms, and General Whining\n\t\tEat_Shit@lupolupo.com\n\t\tOkay… just kidding.\n\t\tYou can send those to </string>
    <string name="contact_us_text_complain_email">\t\tfeedback@lupolupo.com </string>
    <string name="contact_page">Contact page.</string>
    <string name="welcome_note">\nThanks for using our products and services (“Services”). The Services are provided by LupoLupo. (“LupoLupo”), located at 13953 Panay Way, Suite 306, Marina Del Rey, CA 90292, United States.\n\nBy using our Services, you are agreeing to these terms. Please read them carefully.\n\nAdditional terms or product requirements (including age requirements) may apply. Additional terms will be available with the relevant Services, and those additional terms become part of your agreement with us if you use those Services.</string>
    <string name="about_our_site">\nThe LupoLupo Website allows for general viewing of various types of adult-oriented comics, images of adult-oriented content, including sexually themed images.  Accordingly, we encourage you to be aware when you leave the Website and to read the terms, conditions, and privacy policy of each other website that you visit.\n\nThe Website is for your personal use and shall not be used for any commercial endeavor except those specifically endorsed or approved by the Website.\n\nYou understand and acknowledge that you may be exposed to content that is inaccurate, offensive, indecent, or objectionable, and you agree to waive, and hereby do waive, any legal or equitable rights or remedies you have or may have against the Website with respect thereto, and agree to indemnify and hold the Website, its site operator, its parent corporation, their respective affiliates, licensors, service providers, officers, directors, employees, agents, successors and assigns, harmless to the fullest extent allowed by law regarding all matters related to your use of the Website.</string>
    <string name="use_of_material">\nYour use of the LupoLupo Site or Mobile App are for your own personal and non-commercial use only. You acknowledge that, as between LupoLupo and you, except for advertisements, LupoLupo is the sole owner of all content on the LupoLupo Site, including, without limitation, all applicable copyrights, patents, trademarks, trade secrets, trade names, logos, and other intellectual property rights thereto, as well as text, images, graphics, logos, audio, video and other material appearing on the LupoLupo Site (\"LupoLupo Content\"). The LupoLupo Site and LupoLupo Content are protected by the copyright laws and other intellectual property laws of the United States and are protected globally by applicable international copyright treaties.\n\nYou may download and print extracts from LupoLupo Content for your own personal and non-commercial use only, provided you maintain and abide by any author attribution, copyright or trademark notice or restriction in any material that you download or print. You may not use any LupoLupo Content for any other purpose without our prior written approval. Except as expressly authorized by LupoLupo, you are not allowed to create a database in electronic or paper form comprising all or part of the material appearing on the LupoLupo Site.</string>
    <string name="advertisement">\nIf you wish to use our content other than as permitted by these terms and conditions, please email us by using our</string>
    <string name="using_our_service">\nYou must follow any policies made available to you within the Services.\n\nDon’t misuse our Services. For example, don’t interfere with our Services or try to access them using a method other than the interface and the instructions that we provide. You may use our Services only as permitted by law, including applicable export and re-export control laws and regulations. We may suspend or stop providing our Services to you if you do not comply with our terms or policies or if we are investigating suspected misconduct.\n\nUsing our Services does not give you ownership of any intellectual property rights in our Services or the content you access. You may not use content from our Services unless you obtain permission from its owner or are otherwise permitted by law. These terms do not grant you the right to use any branding or logos used in our Services. Don’t remove, obscure, or alter any legal notices displayed in or along with our Services.\n\nIn connection with your use of the Services, we may send you service announcements, administrative messages, and other information. You may opt out of some of those communications.\n\nSome of our Services are available on mobile devices. Do not use such Services in a way that distracts you and prevents you from obeying traffic or safety laws.</string>
    <string name="privacy">\nLupoLupo’s privacy policies explain how we treat your personal data and protect your privacy when you use our Services. By using our Services, you agree that LupoLupo can use such data in accordance with our privacy policies.</string>
    <string name="about_software">\nWhen a Service requires or includes downloadable software, this software may update automatically on your device once a new version or feature is available. Some Services may let you adjust your automatic update settings.\n\nLupoLupo gives you a personal, worldwide, royalty-free, non-assignable and non-exclusive license to use the software provided to you by LupoLupo as part of the Services. This license is for the sole purpose of enabling you to use and enjoy the benefit of the Services as provided by LupoLupo, in the manner permitted by these terms. You may not copy, modify, distribute, sell, or lease any part of our Services or included software, nor may you reverse engineer or attempt to extract the source code of that software, unless laws prohibit those restrictions or you have our written permission.\n\nOpen source software is important to us. Some software used in our Services may be offered under an open source license that we will make available to you. There may be provisions in the open source license that expressly override some of these terms.</string>
    <string name="modifying_and_terminating">\nWe are constantly changing and improving our Services. We may add or remove functionalities or features, and we may suspend or stop a Service altogether.\n\nYou can stop using our Services at any time, although we’ll be sorry to see you go. LupoLupo may also stop providing Services to you, or add or create new limits to our Services at any time.\n\nWe believe that you own your data and preserving your access to such data is important. If we discontinue a Service, where reasonably possible, we will give you reasonable advance notice and a chance to get information out of that Service.</string>
    <string name="warranties">\nWe provide our Services using a commercially reasonable level of skill and care and we hope that you will enjoy using them. But there are certain things that we don’t promise about our Services.\n\nOTHER THAN AS EXPRESSLY SET OUT IN THESE TERMS OR ADDITIONAL TERMS, NEITHER LUPOLUPO NOR ITS SUPPLIERS OR DISTRIBUTORS MAKE ANY SPECIFIC PROMISES ABOUT THE SERVICES. FOR EXAMPLE, WE DON’T MAKE ANY COMMITMENTS ABOUT THE CONTENT WITHIN THE SERVICES, THE SPECIFIC FUNCTIONS OF THE SERVICES, OR THEIR RELIABILITY, AVAILABILITY, OR ABILITY TO MEET YOUR NEEDS. WE PROVIDE THE SERVICES “AS IS”.\n\nSOME JURISDICTIONS PROVIDE FOR CERTAIN WARRANTIES, LIKE THE IMPLIED WARRANTY OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT. TO THE EXTENT PERMITTED BY LAW, WE EXCLUDE ALL WARRANTIES.</string>
    <string name="liability">\nWHEN PERMITTED BY LAW, LUPOLUPO, AND LUPOLUPO’S SUPPLIERS AND DISTRIBUTORS, WILL NOT BE RESPONSIBLE FOR LOST PROFITS, REVENUES, OR DATA, FINANCIAL LOSSES OR INDIRECT, SPECIAL, CONSEQUENTIAL, EXEMPLARY, OR PUNITIVE DAMAGES.\n\nTO THE EXTENT PERMITTED BY LAW, THE TOTAL LIABILITY OF LUPOLUPO, AND ITS SUPPLIERS AND DISTRIBUTORS, FOR ANY CLAIMS UNDER THESE TERMS, INCLUDING FOR ANY IMPLIED WARRANTIES, IS LIMITED TO THE AMOUNT YOU PAID US TO USE THE SERVICES (OR, IF WE CHOOSE, TO SUPPLYING YOU THE SERVICES AGAIN).\n\nIN ALL CASES, LUPOLUPO, AND ITS SUPPLIERS AND DISTRIBUTORS, WILL NOT BE LIABLE FOR ANY LOSS OR DAMAGE THAT IS NOT REASONABLY FORESEEABLE.</string>
    <string name="business_uses">\nIf you are using our Services on behalf of a business, that business accepts these terms. It will hold harmless and indemnify LupoLupo and its affiliates, officers, agents, and employees from any claim, suit or action arising from or related to the use of the Services or violation of these terms, including any liability or expense arising from claims, losses, damages, suits, judgments, litigation costs and attorneys’ fees.</string>
    <string name="about_terms">\nWe may modify these terms or any additional terms that apply to a Service to, for example, reflect changes to the law or changes to our Services. You should look at the terms regularly. We’ll post notice of modifications to these terms on this page. We’ll post notice of modified additional terms in the applicable Service. Changes will not apply retroactively and will become effective no sooner than fourteen days after they are posted. However, changes addressing new functions for a Service or changes made for legal reasons will be effective immediately. If you do not agree to the modified terms for a Service, you should discontinue your use of that Service.\n\nIf there is a conflict between these terms and the additional terms, the additional terms will control for that conflict.\n\nThese terms control the relationship between LupoLupo and you. They do not create any third party beneficiary rights.\n\nIf you do not comply with these terms, and we don’t take action right away, this doesn’t mean that we are giving up any rights that we may have (such as taking action in the future).\n\nIf it turns out that a particular term is not enforceable, this will not affect any other terms.\n\nThe laws of California, U.S.A., excluding California’s conflict of laws rules, will apply to any disputes arising out of or relating to these terms or the Services. All claims arising out of or relating to these terms or the Services will be litigated exclusively in the federal or state courts of Los Angeles County, California, USA, and you and LupoLupo consent to personal jurisdiction in those courts.\n\nFor information about how to contact LupoLupo, please visit our </string>
    <string name="these_terms_and_conditions_were_last_revised_on_january_1_2017">\n\nThese Terms and Conditions were last revised on January 1, 2017</string>
</resources>