<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group>
        <item
            android:id="@+id/nav_home"
            android:title="@string/home" />
    </group>
    <group>
        <item android:title="@string/notifications">
            <menu>
                <group android:checkableBehavior="none">
                    <item
                        android:id="@+id/nav_new_release"
                        android:checkable="false"
                        android:title="@string/new_releases"
                        app:actionLayout="@layout/layout_switch" />
                </group>
            </menu>
        </item>
    </group>
    <group>

        <item android:title="@string/terms_of_use" />
    </group>
    <group>

        <item android:title="@string/open_source_license" />
    </group>
    <group>

        <item android:title="@string/app_version" />
    </group>
</menu>
