<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        style="@style/TextAppearance.AppCompat.Medium.Inverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/contact_us_text" />

    <TextView
        style="@style/TextAppearance.AppCompat.Medium.Inverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/contact_us_info_email"
        android:textColor="@color/colorPrimary" />

    <TextView
        style="@style/TextAppearance.AppCompat.Medium.Inverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/contact_us_feedback_text" />

    <TextView
        style="@style/TextAppearance.AppCompat.Medium.Inverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/contact_us_feedback_email"
        android:textColor="@color/colorPrimary" />

    <TextView
        style="@style/TextAppearance.AppCompat.Medium.Inverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/contact_us_text_complain_text" />

    <TextView
        android:id="@+id/fragment_contact_us.complaint_email"
        style="@style/TextAppearance.AppCompat.Medium.Inverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/contact_us_text_complain_email"
        android:textColor="@color/colorPrimary" />

</LinearLayout>